--- a/dev/vislog.ipynb
+++ b/dev/vislog.ipynb
@@ -145,7 +145,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorch3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -159,7 +159,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
